Blurb update, allow manual blurbs in blog posts

--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -11,22 +11,11 @@ custom-css: ['blog']
       <div class="flex flex-col md:grid md:grid-cols-3 gap-14 md:gap-32 pb-40 md:pb-80 border-b-1 border-black">
         <h1 class="h2">{{page.title}}</h1>
         <div class="md:col-span-2 body-text max-w-[700px] md:pt-10">
-          {% assign paragraphs = content | split: '</p>' %}
-            {% assign first_text_paragraph = '' %}
-            {% for paragraph in paragraphs %}
-              {% assign clean_paragraph = paragraph | replace: '<', ' <' | replace: '>', '> ' | strip_html | strip_newlines %}
-              {% assign clean_paragraph = clean_paragraph %}
-              {% if clean_paragraph.size > 0 %}
-                {% unless clean_paragraph contains '<img' or clean_paragraph contains '<blockquote' %}
-                  {% assign first_text_paragraph = clean_paragraph %}
-                  {% break %}
-                {% endunless %}
-              {% endif %}
-            {% endfor %}
-
-          <p>
-            {{ first_text_paragraph }}
-          </p>
+          {% if page.blurb %}
+            {{ page.blurb }}
+          {% else %}
+            {% include post-blurb.html content=content %}
+          {% endif %}
         </div>
       </div>
     </div>
