--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -11,7 +11,7 @@
   <header class="pt-32 container bg-white">
     <div class="flex items-center justify-between">
       <div aria-hidden class="opacity-0 w-[56px]"></div>
-      <a href="/">
+      <a href="/" class="logo">
         {% include header-splash-logo.html %}
       </a>
       <button class="menu-button" aria-expanded="false" aria-label="Open menu">
