--- a/app/_layouts/tag_or_category.html
+++ b/app/_layouts/tag_or_category.html
@@ -7,7 +7,7 @@ pagination:
 custom-css: ['blog']
 ---
 
-<section class="pt-80 pb-200">
+<section class="pt-40 md:pt-80 pb-40 md:pb-200">
 
   <div class="container flex flex-col gap-50 mb-56">
     {% include tag-filter.html %}
