--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -46,8 +46,11 @@ custom-css: ['blog']
   <h2 class="body-text">Related Articles</h2>
   <div class="grid grid-cols-2 gap-16 md:grid-cols-4 md:gap-24">
     {% assign random_posts = site.posts | where_not: "id == page.id" | sample: 4 %}
+    {% assign last_random_number = nil %}
     {% for post in random_posts %}
-      {% include post-card.html post=post %}
+      {% assign random_number = 5 | random_number: last_random_number %}
+      {% include post-card.html post=post thumb_index=random_number %}
+      {% assign last_random_number = random_number %}
     {% endfor %}
   </div>
 </section>
