--- a/app/_layouts/tag_or_category.html
+++ b/app/_layouts/tag_or_category.html
@@ -17,44 +17,44 @@ custom-css: ['blog']
     </div>
   </div>
 
-  <div class="container grid gap-24 md:grid-cols-4">
-    {% for post in paginator.posts %}
-      <article itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-14 relative">
-        <header class="aspect-square w-full bg-gray">
+  <div class="w-full post-grids">
 
-        </header>
-        <div class="flex flex-col gap-8">
-          <h2 class="text-18 leading-115 font-medium" itemprop="headline">
-            <a href="{{ post.url}}" class="card-link">{{ post.title | smartify }}</a>
-          </h2>
-          <time class="text-18 leading-00" datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %-d, %Y" }}</time>
-        </div>
-
-      </article>
-    {% endfor %}
-  </div>
-
-  {% if paginator.total_pages > 1 %}
-    {% assign start = paginator.page | minus: 1 | times: paginator.per_page | plus: 1 %}
-    {% assign finish = paginator.page | times: paginator.per_page | divided_by: 1 %}
-    {% assign total = paginator.total_posts %}
-
-    {% if finish > total %}
-      {% assign finish = total %}
-    {% endif %}
-    <div class="container pt-60">
-      <div class="w-full pt-20 border-t-1 border-black flex items-center justify-between body-text">
-        <span>{{start}} - {{finish}} of {{ total }}</span>
-        <div class="flex items-center gap-24">
-        {% if paginator.previous_page %}
-          {% include arrow-link.html label="Previous" href=paginator.previous_page_path arrow="back" %}
-        {% endif %}
-        {% if paginator.next_page %}
-          {% include arrow-link.html label="Next" href=paginator.next_page_path %}
-        {% endif %}
-        </div>
-      </div>
+    <div id="list" class="container grid grid-cols-2 gap-16 md:gap-24 md:grid-cols-4 post-grids__search-results">
     </div>
-  {% endif %}
+
+    <div class="post-grids__default">
+      <div class="container grid grid-cols-2 gap-x-8 gap-y-20 md:gap-y-24 md:gap-x-24 md:grid-cols-4">
+        {% assign last_random_number = nil %}
+        {% for post in paginator.posts %}
+          {% assign random_number = 5 | random_number: last_random_number %}
+          {% include post-card.html post=post thumb_index=random_number %}
+          {% assign last_random_number = random_number %}
+        {% endfor %}
+      </div>
+
+      {% if paginator.total_pages > 1 %}
+        {% assign start = paginator.page | minus: 1 | times: paginator.per_page | plus: 1 %}
+        {% assign finish = paginator.page | times: paginator.per_page | divided_by: 1 %}
+        {% assign total = paginator.total_posts %}
+
+        {% if finish > total %}
+          {% assign finish = total %}
+        {% endif %}
+        <div class="container pt-50 md:pt-60">
+          <div class="w-full pt-14 md:pt-20 border-t-1 border-black flex items-center justify-between body-text">
+            <span>{{start}} - {{finish}} of {{ total }}</span>
+            <div class="flex items-center gap-24">
+            {% if paginator.previous_page %}
+              {% include arrow-link.html label="Previous" href=paginator.previous_page_path arrow="back" %}
+            {% endif %}
+            {% if paginator.next_page %}
+              {% include arrow-link.html label="Next" href=paginator.next_page_path %}
+            {% endif %}
+            </div>
+          </div>
+        </div>
+      {% endif %}
+    </div>
+  </div>
 
 </section>
