--- a/app/_includes/tag-filter.html
+++ b/app/_includes/tag-filter.html
@@ -19,6 +19,7 @@
           <a
             class="block text-14 md:text-16 px-10 py-6 md:px-24 md:py-12 border-1 border-black text-black active:text-white active:bg-black md:hover:text-white md:hover:bg-black transition-colors duration-300 ease {% if isActive %}bg-black text-white{% endif %}" 
             href="{% if current == tag %}{{ site.baseurl }}/blog{% else %}{{ site.baseurl }}/blog/tag/{{ tag | slugify}}/{% endif %}"{% if current == tag %} aria-current="true"{% endif %}
+            data-no-swup
           >
           {{ tag }}
           </a>
