Fix logo placement on mobile

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -10,7 +10,7 @@
   </lil-marquee>
   <header class="pt-32 container bg-white">
     <div class="flex items-center justify-between">
-      <div aria-hidden class="opacity-0 w-[56px]"></div>
+      <div aria-hidden class="opacity-0 w-[40px] md:w-[56px]"></div>
       <a href="/" class="logo">
         {% include header-splash-logo.html %}
       </a>
