--- a/app/_includes/footer-logo.html
+++ b/app/_includes/footer-logo.html
@@ -1,4 +1,4 @@
-<svg role="img" class="w-full h-auto" focusable="false" class="footer-logo" viewBox="0 0 174 86" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+<svg role="img" class="w-full h-auto footer-logo" focusable="false" viewBox="0 0 174 86" fill="#fff" xmlns="http://www.w3.org/2000/svg">
     <title>Harvard Law School Library Innovation Lab</title>
     <path d="M0 12.28H49.12V85.95L61.4 73.67V0H12.28L0 12.28Z" />
     <path d="M24.56 24.56H12.28V73.68H36.84V61.4H24.56V24.56Z" />
@@ -41,4 +41,3 @@
     <path d="M153.63 2.6C153.63 1.1 152.67 0 151.16 0C149.65 0 148.7 1.11 148.7 2.6C148.7 4.09 149.66 5.2 151.16 5.2C152.66 5.2 153.63 4.09 153.63 2.6ZM149.95 2.6C149.95 1.69 150.36 0.99 151.16 0.99C151.96 0.99 152.37 1.69 152.37 2.6C152.37 3.51 151.97 4.2 151.16 4.2C150.35 4.2 149.95 3.51 149.95 2.6Z" />
     <path d="M157.94 4.04H155.7V0.0999985H154.47V5.09H157.95V4.04H157.94Z" />
 </svg>
-    
