--- a/app/_includes/post-card.html
+++ b/app/_includes/post-card.html
@@ -13,12 +13,12 @@
 <article itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-14 relative">
   <header class="aspect-square w-full bg-gray relative">
     {% if first_img_src != '' %}
-      <img src="{{ first_img_src }}" class="w-full h-full object-cover absolute inset-0" alt="{{ post.title }}" />
+      <img src="{{ first_img_src }}" class="w-full h-full object-cover absolute inset-0" alt="{{ post.title | smartify }}" />
     {% else %}
       {% if include.post.thumbnail %}
-        <img src="{{ include.post.thumbnail }}" class="w-full h-full object-cover absolute inset-0" alt="{{ post.title }}" />
+        <img src="{{ include.post.thumbnail }}" class="w-full h-full object-cover absolute inset-0" alt="{{ post.title | smartify }}" />
       {% else %}
-        <img src="/assets/images/blog-thumbnail-{{ include.thumb_index }}.png" class="w-full h-full object-cover absolute inset-0" alt="{{ post.title }}" />
+        <img src="/assets/images/blog-thumbnail-{{ include.thumb_index }}.png" class="w-full h-full object-cover absolute inset-0" alt="{{ post.title | smartify }}" />
       {% endif %}
     {% endif %}
   </header>
