--- a/app/_includes/project-card.html
+++ b/app/_includes/project-card.html
@@ -1,7 +1,7 @@
 <div class="relative block container {% if include.featured %}pt-80 md:pt-120{% endif %}">
   {% if include.featured %}
     <div class="absolute w-72 h-72 md:w-165 md:h-165 top-45 left-24 md:top-40 md:left-50 z-[2] motion-safe:animate-spin">
-      <img src="/assets/images/featured-project-text.svg" class="w-full h-full object-contain" />
+      <img src="/assets/images/featured-project-text.svg" class="w-full h-full object-contain" alt="Featured Project" />
     </div>
   {% endif %}
   <div class="{{ include.background }} pt-60 pb-20 md:pt-0 md:pb-0 flex flex-col md:grid md:grid-cols-2 md:items-center relative overflow-hidden md:min-h-[550px]">
