--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -2,11 +2,11 @@
   {% if page.slug == "home" %}
     <lil-marquee class="block marquee bg-purple py-6 md:py-10 px-20 uppercase font-mono text-14 md:text-16 leading-120 tracking-[0.02em] md:tracking-[0.07em] text-announcement whitespace-nowrap overflow-hidden relative z-[100]">
       <a href="{{ site.baseurl }}/jobs/" class="marquee__inner">
-        <div class="marquee__part inline-block">* We’re hiring — Product & Research Manager </div>
-        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Product & Research Manager </div>
-        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Product & Research Manager </div>
-        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Product & Research Manager </div>
-        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Product & Research Manager </div>
+        <div class="marquee__part inline-block">* We’re hiring — Software Engineering Manager </div>
+        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Software Engineering Manager </div>
+        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Software Engineering Manager </div>
+        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Software Engineering Manager </div>
+        <div class="marquee__part inline-block" aria-hidden="true">* We’re hiring — Software Engineering Manager </div>
       </a>
     </lil-marquee>
   {% endif %}
