--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: sectioned-page
-custom-css: ['blog']
+custom-css: ['post-content']
 ---
 
 <section class="container pt-50 md:pt-80 pb-100">
