Label page footer.

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-black text-white pt-60 pb-40">
+<footer aria-label="page footer" class="bg-black text-white pt-60 pb-40">
   <div class="container flex flex-wrap md:grid md:grid-cols-12 md:gap-x-20 md:gap-y-26">
     <a href="/" class="block relative w-full max-w-[160px] md:col-span-4 md:max-w-[340px]">
       {% include footer-logo.html %}
