--- a/app/_layouts/sectioned-page.html
+++ b/app/_layouts/sectioned-page.html
@@ -6,8 +6,9 @@ layout: default
   {% include header.html %}
 
   <div id="swup" class="transition-main">
-
-    {{ content }}
+    <main>
+      {{ content }}
+    </main>
 
     {% include footer.html %}
 
