--- a/app/_layouts/simple-page.html
+++ b/app/_layouts/simple-page.html
@@ -3,9 +3,9 @@ layout: sectioned-page
 ---
 <div class="container">
   <div class="sleeve">
-    <main id="swup" class="simple-section transition-main">
+    <div id="swup" class="simple-section transition-main">
       {{ content }}
-    </main>
+    </div>
   </div>
 </div>
 <script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
