--- a/app/_layouts/event.html
+++ b/app/_layouts/event.html
@@ -6,7 +6,9 @@ custom-css: ['blog']
 <section class="container pt-80">
   <div class="flex flex-col gap-50 md:gap-120 mb-56">
     <div class="flex flex-col items-start gap-20">
-      <a href="/events" class="label interactive-link dark reverse">Events</a>
+      <nav aria-label="breadcrumbs">
+        <a href="/events" class="label interactive-link dark reverse">Events</a>
+      </nav>
       <div class="flex flex-col md:grid md:grid-cols-3 gap-32 pb-40 md:pb-80 border-b-1 border-black">
         <h1 class="h2">
           {{page.title}}
