Switch back to a native button; swap in spans for illegal divs.

--- a/app/_includes/blog-search.html
+++ b/app/_includes/blog-search.html
@@ -3,12 +3,12 @@
     <div class="relative md:col-span-1 flex-1">
       <label for="search" class="sr-only">Search for blog posts</label>
       <input id="search" type="text" class="peer rounded-[0px] w-full border-1 border-black px-12 py-8 md:px-24 md:py-12 text-16 md:text-18 focus:outline-none focus:border-[blue]" placeholder="Search for anything" />
-      <div role="button" data-clear-button class="peer-placeholder-shown:hidden cursor-pointer absolute top-1/2 right-20 -translate-y-1/2" aria-label="Clear search">
-        <div aria-hidden class="w-16 h-16 relative">
-          <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-[2px] bg-black rotate-45"></div>
-          <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-[2px] bg-black -rotate-45"></div>
-        </div>
-      </div>
+      <button type="button" data-clear-button class="peer-placeholder-shown:hidden cursor-pointer absolute top-1/2 right-20 -translate-y-1/2" aria-label="Clear search">
+        <span aria-hidden class="block w-16 h-16 relative">
+          <span class="block absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-[2px] bg-black rotate-45"></span>
+          <span class="block absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full h-[2px] bg-black -rotate-45"></span>
+        </span>
+      </button>
     </div>
     <div>
       <button type="submit" class="text-16 md:text-18 text-white px-18 py-9 md:px-20 bg-black md:py-12">Search</button>
