--- a/app/_layouts/project.html
+++ b/app/_layouts/project.html
@@ -5,7 +5,7 @@ layout: sectioned-page
 <section class="container">
   <div class="page-hero">
     <div class="page-hero__eyebrow">
-      <a href="/projects/" class="interactive-link dark">Projects</a>
+      <a href="{{ site.baseurl }}/projects/" class="interactive-link dark">Projects</a>
     </div>
     <h1 class="page-hero__title">{{ page.title }}</h1>
     <h2 class="page-hero__subtitle">{{page.what_does_it_do}}</h2>
