--- a/app/_layouts/research.html
+++ b/app/_layouts/research.html
@@ -6,7 +6,7 @@ custom-css: ['blog']
 <section class="container">
   <div class="page-hero">
     <div class="page-hero__eyebrow">
-      <a href="/projects/" class="interactive-link dark">Research</a>
+      <a href="{{ site.baseurl }}/research/" class="interactive-link dark">Research</a>
     </div>
     <h1 class="page-hero__title">{{ page.title }}</h1>
   </div>
