--- a/app/_includes/about-people-unaffiliated.html
+++ b/app/_includes/about-people-unaffiliated.html
@@ -1,21 +1,36 @@
 {% assign person = include.person %}
 
 <div class="body-text w-full py-32 border-t-1 border-black flex grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-24 relative">
-  <span class="label md:col-span-3">{{person.name}}</span>
-  <span class="md:col-span-6">{{person.role}}</span>
-  <span class="pt-20 md:pt-0 md:col-span-3 flex md:justify-end">
+  <div class="label md:col-span-3">{{person.name}}</div>
+  <div class="md:col-span-6">{{person.role}}</div>
+  <div class="pt-20 md:pt-0 md:col-span-3 flex md:justify-end">
     {% if person.website or person.twitter_account_name or person.github_account_name %}
-      <span class="flex items-center gap-12 md:gap-24">
+      <ul class="flex items-center gap-12 md:gap-24">
         {% if person.website %}
-          <span class="website"><a href="{{ person.website}}">{% include icon-website.html %}</a></span>
+          <li class="website">
+            <a href="{{ person.website}}">
+              <span class="sr-only">{{ person.name }}'s website</span>
+              <span aria-hidden="true">{% include icon-website.html %}</span>
+            </a>
+          </li>
         {% endif %}
         {% if person.twitter_account_name %}
-          <span class="twitter"><a href="https://www.twitter.com/{{ person.twitter_account_name }}">{% include icon-x.html %}</a></span>
+          <li class="twitter">
+            <a href="https://www.twitter.com/{{ person.twitter_account_name }}">
+              <span class="sr-only">{{ person.name }} on Twitter</span>
+              <span aria-hidden="true">{% include icon-x.html %}</span>
+            </a>
+          </li>
         {% endif %}
         {% if person.github_account_name %}
-          <span class="github"><a href="https://www.github.com/{{ person.github_account_name}}">{% include icon-github.html %}</a></span>
+          <li class="github">
+            <a href="https://www.github.com/{{ person.github_account_name}}">
+              <span class="sr-only">{{ person.name }} on Github</span>
+              <span aria-hidden="true">{% include icon-github.html %}</span>
+            </a>
+          </li>
         {% endif %}
-      </span>
+      </ul>
     {% endif %}
-  </span>
+  </div>
 </div>
