--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer aria-label="page footer" class="bg-black text-white pt-60 pb-40">
   <div class="container flex flex-wrap md:grid md:grid-cols-12 md:gap-x-20 md:gap-y-26">
     <a href="/" class="block relative w-full max-w-[160px] md:col-span-4 md:max-w-[340px]">
-      {% include footer-logo.html %}
+      <span class="sr-only">Home</span>
+      <span aria-hidden="true">{% include footer-logo.html %}</span>
     </a>
     <ul class="footer-nav flex-1 text-right md:text-left md:col-span-6 md:col-start-7 md:text-right md:grid md:grid-cols-2 md:gap-x-20 md:gap-y-10 text-28 md:text-50 leading-[120%] md:leading-[100%] font-medium">
       <li>
@@ -24,9 +25,18 @@
       </li>
     </ul>
     <div class="md:col-span-12 flex items-center justify-end gap-15 w-full self-end pt-32 pb-40 md:pt-0 md:pb-0">
-      <a href="{{ site.github_url}}" target="_blank">{% include icon-github.html %}</a>
-      <a href="{{ site.twitter_url }}" target="_blank">{% include icon-x.html %}</a>
-      <a href="{{ site.linkedin_url }}" target="_blank">{% include icon-linkedin.html %}</a>
+      <a href="{{ site.github_url}}" target="_blank">
+        <span class="sr-only">LIL on Github</span>
+        <span aria-hidden="true">{% include icon-github.html %}</span>
+      </a>
+      <a href="{{ site.twitter_url }}" target="_blank">
+        <span class="sr-only">LIL on Twitter</span>
+        <span aria-hidden="true">{% include icon-x.html %}</span>
+      </a>
+      <a href="{{ site.linkedin_url }}" target="_blank">
+        <span class="sr-only">LIL on LinkedIn</span>
+        <span aria-hidden="true">{% include icon-linkedin.html %}</span>
+      </a>
     </div>
     <div class="w-full flex flex-col md:flex-row md:items-center md:justify-between md:gap-20 pt-24 border-t-1 border-white md:col-span-12 text-12 md:text-16">
       <div class="flex flex-col md:flex-row md:items-center md:gap-100">
