Appease JEKYLL_ENV=production postcss compilation by removing space from name.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -27,7 +27,7 @@
 
 /* latin-ext */
 @font-face {
-  font-family: 'DM Mono';
+  font-family: 'DMMono';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
@@ -36,7 +36,7 @@
 }
 /* latin */
 @font-face {
-  font-family: 'DM Mono';
+  font-family: 'DMMono';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
