Correct URLs to "our work". Consolidate projects, promoted sketches, and new research pages into one collection.

--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="nav-menu__inner">
     <ul class="nav-menu__list container">
       <li>
-        <a class="interactive-link" href="{{ site.baseurl }}/projects/">Our Work</a>
+        <a class="interactive-link" href="{{ site.baseurl }}/our-work/">Our Work</a>
       </li>
       <li>
         <a class="interactive-link" href="{{ site.baseurl }}/blog/">Blog</a>
