Remove unused simple-page layout; merge sectioned-page into default.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -19,5 +19,15 @@
     <script src="{{ site.baseurl }}/assets/lib/swup-head-plugin@2.2.0/index.umd.js"></script>
     {% include custom-css.html %}
   </head>
-  {{ content }}
+  <body class="{{ page.type }} {{ page.slug }} bg-white font-sans font-normal">
+    {% include header.html %}
+    <div id="swup" class="transition-main">
+      <main>
+        {{ content }}
+      </main>
+      {% include footer.html %}
+    </div>
+    <script src="{{ site.baseurl }}/assets/javascripts/main.js"></script>
+    {% include custom-scripts.html %}
+  </body>
 </html>
