--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -171,7 +171,7 @@ lil-header.expanded .nav-menu__inner {
   transition: display 500ms ease 300ms
 }
 
-.interactive-link {
+/*.interactive-link {
   position: relative;
 }
 
@@ -206,10 +206,10 @@ lil-header.expanded .nav-menu__inner {
 .interactive-link.reverse:hover:after, a:hover .interactive-link.reverse:after {
   transform: scaleX(0);
   transform-origin: 100% 100%;
-}
+}*/
 
 /* mimics .interactive-link pseudo-underlining, in a way that works on wrapping text */
-.interactive-link-inline:hover, .interactive-link-inline.reverse {
+/*.interactive-link-inline:hover, .interactive-link-inline.reverse {
   text-decoration: underline;
   text-decoration-thickness: .1ch;
   text-underline-offset: 5px;
@@ -217,6 +217,31 @@ lil-header.expanded .nav-menu__inner {
 
 .interactive-link-inline.reverse:hover {
   text-decoration: none;
+}*/
+
+.interactive-link, .interactive-link-inline  {
+  position: relative;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0 100%;
+  background-size: 100% 0;
+  background-repeat: no-repeat;
+  transition: background-size .2s ease;
+}
+
+.interactive-link:hover, .interactive-link-inline:hover {
+  background-size: 100% .1ch;
+}
+
+.interactive-link.dark, .interactive-link-inline.dark {
+  background-image: linear-gradient(#121212, #121212);
+}
+
+.interactive-link.reverse, .interactive-link-inline.reverse {
+  background-size: 100% .1ch;
+}
+
+.interactive-link.reverse:hover, .interactive-link-inline.reverse:hover {
+  background-size: 100% 0;
 }
 
 .label-value {
