--- a/app/assets/css/post-content.css
+++ b/app/assets/css/post-content.css
@@ -80,7 +80,7 @@
   padding-left: 20px;
 }
 
-.post-content a:after {
+/*.post-content a:after {
   content: "\00a0";
   position: absolute;
   bottom: 2px;
@@ -96,4 +96,17 @@
 .post-content a:hover:after {
   transform: scaleX(0);
   transform-origin: 100% 100%;
+}*/
+
+.post-content a {
+  position: relative;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0 100%;
+  background-size: 100% .1ch;
+  background-repeat: no-repeat;
+  transition: background-size .2s ease;
+}
+
+.post-content a:hover {
+  background-size: 100% 0;
 }
