Make sure empty navigation landmark isn't present when dropdown is closed.

--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -1,5 +1,5 @@
-<nav aria-label="main" class="nav-menu">
-  <div class="nav-menu__inner">
+<div  class="nav-menu">
+  <nav aria-label="main" class="nav-menu__inner">
     <ul class="nav-menu__list container">
       <li>
         <a class="interactive-link" href="{{ site.baseurl }}/our-work/">Our Work</a>
@@ -36,6 +36,6 @@
         </a>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</div>
 <div aria-hidden="true" class="nav-menu__overlay"></div>
