Fix responsivity on dropdown menu

--- a/app/_includes/nav.html
+++ b/app/_includes/nav.html
@@ -1,4 +1,4 @@
-<div  class="nav-menu">
+<div class="nav-menu">
   <nav aria-label="main" class="nav-menu__inner">
     <ul class="nav-menu__list container">
       <li>
@@ -37,5 +37,6 @@
       </div>
     </div>
   </nav>
+  <div class="nav-menu__spacer"></div>
 </div>
 <div aria-hidden="true" class="nav-menu__overlay"></div>
