Accordion toggles need to be buttons.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -334,7 +334,7 @@ lil-header.expanded .nav-menu__inner {
   transition: transform 300ms ease;
 }
 
-.expandable__icon div {
+.expandable__icon span {
   width: 18px;
   height: 1.5px;
   background: #121212;
@@ -345,7 +345,7 @@ lil-header.expanded .nav-menu__inner {
   transition: transform 300ms ease;
 }
 
-.expandable__icon div:nth-child(1) {
+.expandable__icon span:nth-child(1) {
   transform: translate(-50%, -50%) rotate(90deg);
   transition: transform 300ms ease;
 }
@@ -360,7 +360,7 @@ lil-header.expanded .nav-menu__inner {
   transition: transform 300ms ease;
 }
 
-.expandable.expanded .expandable__icon div:nth-child(2) {
+.expandable.expanded .expandable__icon span:nth-child(2) {
   transform: translate(-50%, -50%) rotate(-90deg);
   transition: transform 300ms ease;
 }
@@ -474,7 +474,7 @@ html.is-animating .transition-main {
     height: 28px;
   }
 
-  .expandable__icon div {
+  .expandable__icon span {
     width: 14px;
   }
 
