--- a/app/_layouts/event.html
+++ b/app/_layouts/event.html
@@ -25,10 +25,15 @@ custom-css: ['post-content']
 </section>
 <section class="container post">
   <article role="article" itemscope itemtype="http://schema.org/BlogPosting" class="flex flex-col gap-24 md:grid md:grid-cols-12 body-text pb-150">
-    <div class="md:col-span-8 md:col-start-3 flex flex-col gap-72" itemprop="articleBody">
-      <div class="post-content">
-        {{ content }}
-      </div>
+    <div class="md:col-span-8 md:col-start-3" itemprop="articleBody">
+        {% if page.banner %}
+          <img src="{{ site.baseurl }}/assets/images/events/{{ page.banner }}"
+            alt=""
+            class="img-full-width mb-40">
+        {% endif %}
+        <div class="post-content">
+          {{ content }}
+        </div>
     </div>
   </article>
 </section>
