Comment out remaining CSS for left-to-right animated links.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -474,13 +474,13 @@ html.is-animating .transition-main {
     padding-bottom: 0;
   }
 
-  .interactive-link {
+/*  .interactive-link {
     text-decoration: underline;
   }
   
   .interactive-link:after {
     display: none;
-  }
+  }*/
 
   .nav-menu__list a, .footer-nav a {
     text-decoration: none;
