--- a/app/_includes/contact-section.html
+++ b/app/_includes/contact-section.html
@@ -5,7 +5,7 @@
       <div class="flex flex-col gap-50">
         <div class="label-value">
           <h3 class="label">Email</h3>
-          <a href="mailto:lil@law.harvard.edu" class="value interactive-link dark reverse">lil@law.harvard.edu</a>
+          <a href="mailto:{{ site.email }}" class="value interactive-link dark reverse">{{ site.email }}</a>
         </div>
         <div class="label-value">
           <h3 class="label">Contact us in person</h3>
