Take down job listing.

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -1,10 +1,10 @@
 {% if page.slug == "home" %}
-    <div class="hiring-announcement">
+<!--     <div class="hiring-announcement">
       <a href="{{ site.baseurl }}/jobs/">
         We're hiring!
-        We're looking for a Software Engineering Manager.
+        We're looking for...
       </a>
-    </div>
+    </div> -->
   <header class="header-splash">
     <div>
       {% include header-splash-logo.html %}
