Add Mastodon sprite for unaffiliated people

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -986,6 +986,9 @@ a.gallery-item {
     .twitter a {
       background-image: url('../images/twitter-sprite.svg');
     }
+    .mastodon a {
+      background-image: url('../images/mastodon-sprite.svg');
+    }
     .github a {
       background-image: url('../images/github-sprite.svg');
     }
