--- a/app/_includes/about-people-unaffiliated.html
+++ b/app/_includes/about-people-unaffiliated.html
@@ -5,13 +5,16 @@
       <strong class="name">{{ person.name }}</strong>
       <span class="role">{{ person.role }}</span>
     </div>
-    {% if person.website or person.twitter_account_name or person.github_account_name %}
+    {% if person.website or person.twitter_account_name or person.mastodon_url or person.github_account_name %}
       <ul class="social">
         {% if person.website %}
           <li class="website"><a href="{{ person.website}}">{{ person.website }}</a></li>
         {% endif %}
         {% if person.twitter_account_name %}
           <li class="twitter"><a href="https://www.twitter.com/{{ person.twitter_account_name }}">{{ person.twitter_account_name }}</a></li>
+        {% endif %}
+        {% if person.mastodon_url %}
+          <li class="mastodon"><a href="{{ person.mastodon_url }}">{{ person.mastodon_url | to_handle }}</a></li>
         {% endif %}
         {% if person.github_account_name %}
           <li class="github"><a href="https://www.github.com/{{ person.github_account_name}}">{{ person.github_account_name }}</a></li>
