--- a/app/_includes/about-people-unaffiliated.html
+++ b/app/_includes/about-people-unaffiliated.html
@@ -23,7 +23,12 @@
           </li>
         {% endif %}
         {% if person.mastodon_url %}
-          <li class="mastodon"><a href="{{ person.mastodon_url }}">{{ person.mastodon_url | to_handle }}</a></li>
+          <li class="mastodon">
+            <a href="{{ person.mastodon_url }}">
+              <span class="sr-only">{{ person.mastodon_url | to_handle }} on Mastodon</span>
+              <span aria-hidden="true">{% include icon-mastodon.html %}</span>
+            </a>
+          </li>
         {% endif %}
         {% if person.github_account_name %}
           <li class="github">
